--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Hangman</title>
-    <link rel="stylesheet" href="css/hangman.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div id="content">
@@ -29,6 +29,7 @@
         <br><br>
     </div>
 <script src="js/jquery-1.11.0.min.js"></script>
+<script src="js/underscore.js"></script>
 <script src="js/hangman.js"></script>    
 </body>
 </html>
